trying to fix submit button on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ input[type=text] {
   }
 
   #submit {
-    font-size: 3.75vw;
+    font-size: inherit;
   }
 
   td, th {
